Fix warning on JDK25.